# Data-science

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Video/: presentation_projet-data_fr.ass  presentation_projet-data_fr.srt
data/: modele_eco_ols.joblib  modele_ml_reg.joblib  phase5_ols_summary.txt
docs/: git.md  phase0_architecture.md  phase1_dossier.md  phase2_ressources.md  phase3_temps.md  phase4_integration.md  phase4b_analyse_exploratoire.md  phase5_econometrie.md  phase5b_analyse_multidimensionnelle.md  phase6_machine_learning.md  phase7_dashboard.md  setup.md  ssh.md
econometrie/: phase5_econometrie.ipynb  phase5b_analyse_multidimensionnelle.ipynb
machine_learning/: phase6_machine_learning.ipynb
mise_en_production/: dashboard.py  sqlite_insert.py  train_and_save_models.py
src/utils/: dataframe_styler.py
traitement_de_donnees/: phase1_dossier_nettoyage.ipynb  phase2_ressources_nettoyage.ipynb  phase3_temps_nettoyage.ipynb  phase4_integration_sources.ipynb  phase4b_analyse_exploratoire.ipynb
