[project]
name = "projet-big-data"
version = "0.1.0"
description = "Analyse de données d'assistance — DU Big Data, Université de Montpellier 2025-2026"
requires-python = ">=3.11"

dependencies = [
    # Data science core
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    # Notebooks
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipykernel>=7.1.0",
    # Production / dashboard
    "streamlit>=1.24.0",
    "plotly>=5.14.0",
    # Utilities
    "openpyxl>=3.1.0",
    "joblib>=1.3.0",
]

[dependency-groups]
dev = [
    "flake8>=6.0.0",
    "pytest>=7.3.0",
    "pre-commit>=3.3.0",
]
